pod-security/disallow-privilege-escalation/.chainsaw-test/invalid-init-no-restriction.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-init-no-restriction
spec:
  initContainers:
    - name: init
      image: nginx:1.25
  containers:
    - name: app
      image: nginx:1.25
      securityContext:
        allowPrivilegeEscalation: false
