pod-security/disallow-privilege-escalation/.chainsaw-test/invalid-no-restriction.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-no-restriction
spec:
  containers:
    - name: app
      image: nginx:1.25
